java.net.URL -> java.net.URI
.. we want to avoid those awkward .equals() errors